--- a/cs50.html
+++ b/cs50.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>Shop UI Prototyping</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'><link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'><link rel="stylesheet" href=".././style.css">
+<link rel="stylesheet" href="/static/css/style.css">
+<script src="/static/script.js"></script>
 
 </head>
 <body>
@@ -31,7 +33,7 @@
     </div>
     <div class="nav--secondary">
       <ul data-menu="properties" class="active menu menu-1">
-        <li><a href="/">For Sale</a></li>
+        <li><a href="/forsale">For Sale</a></li>
         <li><a class="active" href="#">For Rent</a></li>
         <li><a href="#">Condo</a></li>
         <li><a href="#">Mortgages</a></li>
@@ -113,7 +115,7 @@
        <p>House 1</p>
      </li>
      <li class="item">
-       <img src="https://www.maramani.com/cdn/shop/files/4-bedrooommodernbungalowhouse-ID14511-Image01.jpg?v=1696423958&width=2048">
+       <img src="https://p3-pc-sign.douyinpic.com/image-cut-tos-priv/fa0544953a4bd5959681a8dda3839a91~tplv-dy-resize-origshort-autoq-75:330.jpeg?lk3s=138a59ce&x-expires=2049411600&x-signature=njvtl1Gwt9igUoaGZUkX00YDKmk%3D&from=327834062&s=PackSourceEnum_AWEME_DETAIL&se=false&sc=cover&biz_tag=pcweb_cover&l=20241213090104BF9D7D4EBAB8EC60D8ED">
        <p>House 2</p>
      </li>
      <li class="item">
@@ -138,7 +140,7 @@
 </main>
 <!-- partial -->
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script><script  src=".././script.js"></script>
 
 </body>
 </html>
