--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <title>Shop UI Prototyping</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'><link rel="stylesheet" href="./css/style.css">
+<!--<link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'><link rel="stylesheet" href="/../css/style.css">-->
+<link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'><link rel="stylesheet" href="/static/css/style.css">
+<link rel="stylesheet" href="/static/css/style.css">
+<script src="/static/script.js"></script>
 
 </head>
 <body>
@@ -13,7 +16,7 @@
   <nav class="header-nav group">
     <div class="nav--container">
       <div class="logo">
-        <a href="#"><img height="36px" width="auto" src="img/DynastyExecutive.png" alt="Leading Edge Logo"></a>
+        <a href="/"><img height="36px" width="auto" src="/static/img/DynastyExecutive.png" alt="Leading Edge Logo"></a>
       </div>
       <ul class="nav--primary">
         <li><a href="/"><i class="material-icons">home</i></a></li>
@@ -35,8 +38,8 @@
     </div>
     <div class="nav--secondary">
       <ul data-menu="properties" class="active menu menu-1">
-        <li><a href="/">For Sale</a></li>
-        <li><a class="active" href="#">For Rent</a></li>
+        <li><a href="/forsale">For Sale</a></li>
+        <li><a class="active" href="/forrent">For Rent</a></li>
         <li><a href="#">Condo</a></li>
         <li><a href="#">Mortgages</a></li>
         <li><a href="#">Commercial</a></li>
@@ -80,12 +83,7 @@
   </nav>
   </header>
 <main>
-<!--   <section class="banner banner--full">
-   <div class="banner__inner">
-     <h1>Height Safety. <br>Made Simple.</h1>
-     <p>Working at height access solutions, training and equipment that will keep your feet firmly off the ground.</p>
-    </div> 
-  </section> -->
+
   <nav class="product-menu">
     <div class="search-input">
     <input type="text" placeholder="Search...">
@@ -111,7 +109,8 @@
  <div class="container group">
    <div class="breadcrumb"></div>
    <ul class="product-grid group">
-     
+     <!-- use loop to display an amount of properties, Leon -->
+     {% block main %}{% endblock %}
      <li class="item">
        <img src="https://www.maramani.com/cdn/shop/files/4-bedrooommodernbungalowhouse-ID14511-Image01.jpg?v=1696423958&width=2048">
        <p>House 1</p>
@@ -143,7 +142,7 @@
 </main>
 <!-- partial -->
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script><script  src="../static/script.js"></script>
 
 </body>
 </html>
