--- a/forsale.html
+++ b/forsale.html
@@ -1,14 +1,41 @@
-{% extends "index.html" %}
+{% extends "layout.html" %}
 
 {% block title %}
-    Index.html
+    forsale.html
 {% endblock %}
 
 {% block main %}
-{% for house_num in houses %}
+<nav class="product-menu">
+  <div class="search-input">
+  <input type="text" placeholder="Search...">
+  <label for="email" rel="tooltip" title="email"></label>
+  </div>
+  <ul>
+    <li class="has-dropdown">
+      <li class="selected"><a href="#"><i class="material-icons">home</i>All Properties</a></li>
+      <h><b>Residential</b></h>
+      <a><i class="material-icons">work</i>Bungalow/Villa</a>
+    </li>
+    <li><a><i class="material-icons">accessibility</i>Apartment/Condo/Service Resident</a></li>
+    <li><a><i class="material-icons">hearing</i>Semi-Detached House</a></li>
+    <li><a><i class="material-icons">add_circle_outline</i>Terrace/Link House</a></li>
+    <h><b>Commercial</b></h>
+    <li><a><i class="material-icons">build</i>Commercial</a></li>
+    <li><a><i class="material-icons">markunread_mailbox</i>Industrial</a></li>
+    <li><a><i class="material-icons">memory</i>Agriculture Land</a></li>
+    <li><a><i class="material-icons">power_input</i>Others</a></li>
+
+   
+</nav>
+<div class="container group">
+ <div class="breadcrumb"></div>
+ <ul class="product-grid group">
+{% for house in for_sale_houses %}
 <li class="item">
-    <img src="https://www.maramani.com/cdn/shop/files/4-bedrooommodernbungalowhouse-ID14511-Image01.jpg?v=1696423958&width=2048">
-    <p>House {{ house_num }} </p>
+    <img src="{{ house.img_url }}">
+    <p> {{ house.property_name }} </p>
 </li>
 {% endfor %}
+</ul>
+</div>
 {% endblock %}
