--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Login Page</title>
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css'><link rel="stylesheet" href="./css/login.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css'><link rel="stylesheet" href="/static/css/login.css">
 
 </head>
 <body>
@@ -12,9 +12,9 @@
 <div class="login-fg">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-8 col-lg-7 col-md-12 bg" style="background-image:url('./img/login\ bg.png')">
+            <div class="col-xl-8 col-lg-7 col-md-12 bg" style="background-image:url('static/img/login bg.png')">
                 <div class="info">
-                    <img src="./img/Dynasty8 Login Logo.png" width="344px">
+                    <img src="/static/img/Dynasty8 Login Logo.png" width="344px">
                     <h1><i>executive</i></h1>
                     <p>Fulfill your inner American Dream</p>
                 </div>
@@ -22,7 +22,7 @@
             <div class="col-xl-4 col-lg-5 col-md-12 login">
                 <div class="login-section">
                     <div class="logo clearfix">
-                        <img src="./img/DynastyExecutive.png">
+                        <img src="/static/img/DynastyExecutive.png">
                     </div>
                     <h3>Sign in into your account</h3>
                     <ul class="social">
@@ -34,13 +34,13 @@
                         <span>Or</span>
                     </div>
                     <div class="form-container">
-                        <form action="#" method="GET">
+                        <form action="/login" method="post">
                             <div class="form-group form-fg">
-                                <input type="email" name="email" class="input-text" placeholder="Email Address">
+                                <input type="text" name="username" class="input-text" placeholder="Email Address">
                                 <i class="fa fa-envelope"></i>
                             </div>
                             <div class="form-group form-fg">
-                                <input type="email" name="email" class="input-text" placeholder="Password">
+                                <input type="password" name="password" class="input-text" placeholder="Password">
                                 <i class="fa fa-unlock-alt"></i>
                             </div>
                             <div class="checkbox clearfix">
@@ -64,7 +64,7 @@
     </div>
 </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="../static/script.js"></script>
 
 </body>
 </html>
