--- a/layout.html
+++ b/layout.html
@@ -14,6 +14,7 @@
 <!-- partial:index.partial.html -->
 
 <!-- Add login logout based on the role.. -->
+
 <header class="header">
     {% block header %}
   <nav class="header-nav group">
@@ -31,7 +32,11 @@
       </ul>
       <ul class="tools">
         <li><a href="#"><i class="material-icons">date_range</i></a></li>
-        <li class="has-dropdown"><a href="login.html"><i class="material-icons">account_circle</i></a>
+        {% if session['admin'] == 1 or session['admin'] == 0 %}
+        <li class="has-dropdown"><a href="/logout">{{ session['username'] }}<i class="material-icons">account_circle</i></a>
+        {% else %}
+        <li class="has-dropdown"><a href="/login"><i class="material-icons">account_circle</i></a>
+        {% endif %}
         <ul>
           <li></li>
         </ul>
@@ -41,11 +46,15 @@
     </div>
     <div class="nav--secondary">
       <ul data-menu="properties" class="active menu menu-1">
+        {% if session['admin'] == 1 %}
+        <li><a href="/admin/add_property"><i class="material-icons"></i>Add Property</a></li>
+        {% else %}
         <li><a href="/forsale">For Sale</a></li>
         <li><a class="active" href="/forrent">For Rent</a></li>
         <li><a href="/condo">Condo</a></li>
         <li><a href="mortgages">Mortgages</a></li>
         <li><a href="/commercial">Commercial</a></li>
+        {% endif %}
 
       </ul>
       <ul data-menu="find-agent" class="menu menu-2">
@@ -96,19 +105,19 @@
     </div>
     <ul>
       <li class="has-dropdown">
-        <li class="selected"><a href="#"><i class="material-icons">home</i>All Properties</a></li>
-        <h><b>Residential</b></h>
-        <a href="/bungalow_villa"><i class="material-icons">work</i>Bungalow/Villa</a>
-      </li>
+      <li class="selected"><a href="/"><i class="material-icons">home</i>All Properties</a></li>
+      <h><b>Residential</b></h>
+      <li><a href="/bungalow_villa"><i class="material-icons">work</i>Bungalow/Villa</a></li>
       <li><a href="/apartment_condo_service"><i class="material-icons">accessibility</i>Apartment/Condo/Service Resident</a></li>
       <li><a href="/semi_detached_house"><i class="material-icons">hearing</i>Semi-Detached House</a></li>
       <li><a href="/terrace_link_house"><i class="material-icons">add_circle_outline</i>Terrace/Link House</a></li>
       <h><b>Commercial</b></h>
       <li><a href="/commercial"><i class="material-icons">build</i>Commercial</a></li>
       <li><a href="/industrial"><i class="material-icons">markunread_mailbox</i>Industrial</a></li>
-      <li><a href="#"><i class="material-icons">memory</i>Agriculture Land</a></li>
-      <li><a href="#"><i class="material-icons">power_input</i>Others</a></li>
-
+      <li><a href="/agriculture_land"><i class="material-icons">memory</i>Agriculture Land</a></li>
+      <li><a href="/others"><i class="material-icons">power_input</i>Others</a></li>
+      </li>
+  </ul>
      
   </nav>
  <div class="container group">
