--- a/layout.html
+++ b/layout.html
@@ -48,6 +48,7 @@
       <ul data-menu="properties" class="active menu menu-1">
         {% if session['admin'] == 1 %}
         <li><a href="/admin/add_property"><i class="material-icons"></i>Add Property</a></li>
+        <li><a href="/admin/viewUser"><i class="material-icons"></i>View Users</a></li>
         {% else %}
         <li><a href="/forsale">For Sale</a></li>
         <li><a class="active" href="/forrent">For Rent</a></li>
@@ -134,3 +135,4 @@
 
 </body>
 </html>
+
